# floppa-auth

./: .env  .gitignore  .gitmodules  Cargo.toml  README.md  api.md  build.rs  index.html  tailwind.config.js
based.bonsaidb/: master-keys  storage-id
based.bonsaidb/_admin/: collection.bonsaidb.databases.nebari  view.bonsaidb.databases.by-name.nebari
based.bonsaidb/default/: _transactions  collection.private.users.nebari
based.bonsaidb/vault-keys/: 62243ae303c002e3
cli/: main.rs
fonts/: fonts.html
src/: auth.rs  lib.rs  main.rs  state.rs  web.rs
templates/: base.html  home.html  login.html  register.html  sessions.html
